--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ features                                  :
 
   - title                                 : The app you've always wanted
     description                           : But didn't know you needed
-    fontawesome_icon_name                 : mobile
+    fontawesome_icon_name                 : mobile-screen
     
   - title                                 : An essential tool
     description                           : Never feel bad for tossing another greeting card
