--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : rakTech                               
+your_name                                 : rakTech, LLC                               
 your_link                                 : https://raktech.app                     
 your_city                                 : the USA                                
 email_address                             : raktech_dev@icloud.com
