--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ device_color                              : black                               
 
 body_background_color                     : "#ffffff"
 
-link_color                                : "#1d63ea"
+link_color                                : "#00a4ed"
 
 app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
@@ -99,7 +99,7 @@ app_description_color                     : "#ffffff"
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#1d63ea"
+feature_icons_foreground_color            : "#00a4ed"
 feature_icons_background_color            : "#e6e6e6"
 
 social_icons_foreground_color             : "#666666"
