--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ enable_smart_app_banner                   : true                                
 your_name                                 : rakTech, LLC                               
 your_link                                 : https://raktech.app                     
 your_city                                 : the USA                                
-email_address                             : raktech_dev@icloud.com
+email_address                             : hellothere@raktech.app
 facebook_username                         :                                           
 instagram_username                        : 
 twitter_username                          : hellothere_app
