--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    :                                     
 
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Hello There - Greeting Cards                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 : Available 9.12.22                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price                                 :                                   # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Do you hate throwing away greeting cards, but hate keeping them too?
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
