--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Hello There - Greeting Cards                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                   # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Do you hate throwing away greeting cards, but hate keeping them too?
+app_description                           : A beautiful greeting card organizer for iPhone and iPad
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -60,7 +60,7 @@ features                                  :
     fontawesome_icon_name                 : fingerprint
   
   - title                                 : Favorites
-    description                           : Some cards deserve more attention -- easily find your favorites
+    description                           : Some cards are just better than others -- easily find your favorites
     fontawesome_icon_name                 : star
 
   - title                                 : Apple exclusive
