--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ features                                  :
     description                           : Catalog and inventory cards from friends and family
     fontawesome_icon_name                 : mobile
     
-  - title                                 : Essential
+  - title                                 : Simple
     description                           : Never feel bad for tossing another greeting card
     fontawesome_icon_name                 : check
     
