--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,24 @@ features                                  :
     description                           : # New Feature Description
     fontawesome_icon_name                 : # Enter Font Awesome icon name (e.g. star). Find icons on fontawesome.com/icons.
     
+    
+    # Press Review List                       Edit, add or remove press reviews to be presented.
+pressreviews                              :
+
+  - author                                : Brent Dirks
+    quote                                 : [Hello There] is well thought out and easy to use
+    sitename                              : App Advice
+    siteurl                               : https://appadvice.com/post/preserve-your-personalized-greeting-card-memories-with-hello-there/775005
+    fontawesome_icon_name                 : newspaper
+    
+    
+  - author                                : Andrew O'Hara
+    quote                                 : An awesome way to be reminded of cards you’ve forgotten about.
+    sitename                              : Fueled
+    siteurl                               : https://fueled.com/blog/hello-there-helps-keep-cards-without-clutter/
+    fontawesome_icon_name                 : newspaper
+  
+    
 
 # Theme Settings
 topbar_color                              : "#000000"
