--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ your_link                                 : https://raktech.app
 your_city                                 : the USA                                
 email_address                             : hellothere@raktech.app
 facebook_username                         :                                           
-instagram_username                        : 
+instagram_username                        : hellothere_app
 twitter_username                          : hellothere_app
 github_username                           : 
 youtube_username                          :
